--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,14 @@ body{ font-family: 'Raleway', sans-serif; }
 #login-form .login_btn:hover{background: #cc1430;}
 
 /* clock */
-.clock_wrap{min-width: 400px; padding: 10px 10px; box-sizing: border-box; background: rgba(255, 255, 255, 0.3); border-radius: 10px; backdrop-filter: blur(5px); position: absolute; top: 30px; left: 50%; transform: translateX(-50%); display: flex; justify-content: center; align-items: center;}
+.clock_wrap{min-width: 400px; padding: 10px; box-sizing: border-box; background: rgba(255, 255, 255, 0.3); border-radius: 10px; backdrop-filter: blur(5px); position: absolute; top: 30px; left: 50%; transform: translateX(-50%); display: flex; justify-content: center; align-items: center;}
 .clock_wrap h2{font-size: 30px; color: #fff; font-weight: bold; font-family: 'Noto Sans KR', sans-serif; margin: 0 10px;}
+
+/* weather */
+#weather{background: #fff; padding: 10px; position: absolute; top: 30px;left: 50%; transform: translateX(370px); background: rgba(255, 255, 255, 0.3); backdrop-filter: blur(5px);  border-radius: 10px;}
+#weather ul{display: flex;}
+#weather ul li{margin: 0 5px;}
+#weather span{color: #fff; font-weight: bold; font-size: 30px;}
 
 /* todo */
 .todo{width: 1280px; height: 70vh; background:rgba(255, 255, 255, 0.3); backdrop-filter: blur(15px); border-radius: 20px; padding: 20px; box-sizing: border-box;}
@@ -43,8 +49,8 @@ body{ font-family: 'Raleway', sans-serif; }
 .todo_main_cont{display: flex;justify-content: space-between; margin-top: 20px;}
 .todo_cont{width: 900px;height: 530px; padding: 20px; box-sizing: border-box; background: rgba(255, 255, 255, 0.6); backdrop-filter: blur(10px); border-radius: 10px;}
 #todo-form{}
-#todo-form input{width: 100%; height: 50px; padding-left: 10px; font-size: 18px; border: none; border-radius: 10px; box-sizing: border-box;}
-#todo-list{width: 100%;height: 420px; margin-top: 20px; padding: 10px 20px; border-radius: 10px; background: #fff; box-sizing: border-box; overflow-y: scroll;}
+#todo-form input{width: 100%; height: 50px; padding-left: 10px; font-size: 18px; border: none; box-sizing: border-box; border-radius: 10px;background: linear-gradient(145deg, #ffffff, #e6e6e6);box-shadow:  8px 8px 16px #666666, -8px -8px 16px #ffffff;}
+#todo-list{width: 100%;height: 420px; margin-top: 20px; padding: 10px 20px;box-sizing: border-box; overflow-y: scroll; border-radius: 10px;background: linear-gradient(145deg, #ffffff, #e6e6e6);box-shadow:  11px 11px 23px #666666,-11px -11px 23px #ffffff;}
 #todo-list li{margin: 10px 0; display: flex; justify-content: space-between; align-items: center; border: 1px dashed #ccc; border-radius: 10px; padding: 10px; box-sizing: border-box;}
 #todo-list li span{font-size: 16px;}
 #todo-list li button{background: none;}
@@ -84,14 +90,4 @@ body{ font-family: 'Raleway', sans-serif; }
 .music_title{margin-bottom: 50px;}
 .music_title em{font-size: 16px; font-weight: 500; color: #333;}
 
-@media (max-width : 1300px){
-    .todo{width: 98.4615vw;}
-    #greeting{width: 19.2308vw; font-size: 2.3077vw;}
-    .todo_title_cont{width: 74.6154vw;}
-    .todo_title_cont p{font-size: 1.0769vw;}
-    .todo_title_cont p:nth-child(1){font-size: 1.2308vw; }
-    .todo_cont{width: 69.2308vw;height: 530px;}
-    .music{width: 24.6154vw;}
-
-}
 
